--- a/final-project-react-front-end/src/index.css
+++ b/final-project-react-front-end/src/index.css
@@ -1,48 +1,206 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap');
 
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
-code {
-  font-family: 'Poppins', sans-serif;
+#header-component {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid #dddddd;
+  z-index: 1;
+  background-color: white;
 }
 
-nav {
-
+#logo {
+    height: 90px;
+    position: relative;
+    float: left;
+    margin-left: 80px;
 }
 
-nav a {
-
+.btn {
+    background-color: white;
+    font-family: 'Poppins', sans-serif;
+    border: none;
 }
 
-nav a:hover, nav a:active {
-
+.filterbtn {
+  border-right: 1px solid #dddddd;
+  height: 18px;
 }
 
-.listingsDiv {
-
+#searchbar {
+  border: 1px solid #dddddd;
+  border-radius: 21px;
+  padding: 5px;
+  float: left;
+  align-items: center;
+  justify-content: center;
+  margin-left: 400px;
+  margin-top: 15px;
+  font-size: 22px;
 }
 
-/*red/pink color: rgb(255, 56, 92) */
-
-
-
-.listingCard { 
-
+#guests {
+  color: #dddddd;
+}
+#searchbtn {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  vertical-align: bottom;
+  background-color: rgb(255, 56, 92);
+  color: white;
+  justify-content: center;
+  
 }
 
-.header {
-
+#hostbtn {
+  border: none;
+  font-size: 14px;
+  border-radius: 100px;
+  padding: 12px;
 }
 
-.footer {
-
+#langbtn {
+  display: inline-flex;
+  vertical-align: middle;
+  font-size: 21px; 
+  padding: 10px;
+  border-radius: 400px;
 }
 
-.buttonIcons {
+#usermenu {
+    border-radius: 23px;
+    padding: 3px;
+    border: 1px solid #dddddd;
+}
 
+.user-icons {
+  vertical-align: middle;
+  
+}
+
+#user-info {
+  position: relative;
+  float: right;
+  margin-right: 80px;
+  margin-top: 20px;
+}
+
+#footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  border-top: 1px solid #dddddd;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  background-color: white;
+}
+
+.left-container {
+  font-weight: 200;
+  font-size: 14px;
+  float: left;
+  margin: 2px 5px 0px 5px;
+}
+
+#right-container {
+  float: right;
+  margin-right: 20px;
+  font-size: 14px;
+}
+
+.container-element {
+  float: left;
+  margin: 2px 10px 0px 10px;
+}
+
+#foot-lang {
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+#filter-component {
+  position: fixed;
+  top: 91px;
+  width: 100%;
+  z-index: 1;
+  background-color: white;
+}
+
+.filterImg {
+  width: 24px;
+  height: 24px;
+}
+
+.filterIcon {
+  float: left;
+  margin: 15px 10px 5px 10px;
+  font-size: 12px;
+  text-align: center;
+  
+}
+
+#first-icon {
+  margin-left: 90px;
+}
+
+#listing-component {
+  position: relative;
+  margin: 200px 80px 0 80px;
+  
+}
+
+.listingCard {
+  float: left;
+  width: 25%;
+  margin-bottom: 50px;
+}
+
+.listingInfo {
+  text-align: left;
+  margin: 0 30px;
+  
+}
+
+.location {
+  float: left;
+}
+.rating {
+  float: right;
+}
+
+.light {
+  font-weight: 200;
+  clear: left;
+}
+
+.listingImg {
+  height: 300px;
+  width: 300px;
+  border-radius: 7%;
+}
+
+.hoverHeader {
+  background-color: #ededed;
+}
+
+.hoverHeader2 {
+  box-shadow: 1px 0.25px #dddddd;
+}
+
+.hoverFilter {
+  border-bottom: 2px solid #dddddd;
+}
+
+.hoverFooter {
+  text-decoration: underline;
 }
