--- a/final-project-react-front-end/src/index.css
+++ b/final-project-react-front-end/src/index.css
@@ -8,7 +8,7 @@ body {
   text-align: center;
 }
 
-#header-component {
+.header-component {
   position: fixed;
   top: 0;
   width: 100%;
@@ -17,7 +17,7 @@ body {
   background-color: white;
 }
 
-#logo {
+.logo {
     height: 90px;
     position: relative;
     float: left;
@@ -35,7 +35,7 @@ body {
   height: 18px;
 }
 
-#searchbar {
+.searchbar {
   border: 1px solid #dddddd;
   border-radius: 21px;
   padding: 5px;
@@ -47,10 +47,10 @@ body {
   font-size: 22px;
 }
 
-#guests {
+.guests {
   color: #dddddd;
 }
-#searchbtn {
+.searchbtn {
   border-radius: 50%;
   width: 32px;
   height: 32px;
@@ -61,14 +61,14 @@ body {
   
 }
 
-#hostbtn {
+.hostbtn {
   border: none;
   font-size: 14px;
   border-radius: 100px;
   padding: 12px;
 }
 
-#langbtn {
+.langbtn {
   display: inline-flex;
   vertical-align: middle;
   font-size: 21px; 
@@ -76,7 +76,7 @@ body {
   border-radius: 400px;
 }
 
-#usermenu {
+.usermenu {
     border-radius: 23px;
     padding: 3px;
     border: 1px solid #dddddd;
@@ -87,14 +87,14 @@ body {
   
 }
 
-#user-info {
+.user-info {
   position: relative;
   float: right;
   margin-right: 80px;
   margin-top: 20px;
 }
 
-#footer {
+.footer {
   position: fixed;
   width: 100%;
   bottom: 0;
@@ -112,7 +112,7 @@ body {
   margin: 2px 5px 0px 5px;
 }
 
-#right-container {
+.right-container {
   float: right;
   margin-right: 20px;
   font-size: 14px;
@@ -123,12 +123,12 @@ body {
   margin: 2px 10px 0px 10px;
 }
 
-#foot-lang {
+.foot-lang {
   vertical-align: middle;
   font-size: 20px;
 }
 
-#filter-component {
+.filter-component {
   position: fixed;
   top: 91px;
   width: 100%;
@@ -149,11 +149,11 @@ body {
   
 }
 
-#first-icon {
+.first-icon {
   margin-left: 90px;
 }
 
-#listing-component {
+.listing-component {
   position: relative;
   margin: 200px 80px 0 80px;
   
