--- a/final-project-react-front-end/src/index.css
+++ b/final-project-react-front-end/src/index.css
@@ -204,3 +204,37 @@ body {
 .hoverFooter {
   text-decoration: underline;
 }
+
+.user-dropdown {
+  width: 250px;
+  height: 250px;
+  text-align: left;
+  border-radius: 4%;
+  border: 1px solid #dddddd;
+  
+}
+
+.login {
+  font-weight: 200;
+  border-bottom: 1px solid #dddddd;
+  padding: 5px;
+}
+
+.host {
+  font-weight: 200;
+  padding: 5px;
+}
+
+
+.additional-footer-info {
+  border-top: 1px solid #dddddd;
+  height: 300px;
+  width: 100%;
+}
+
+.additional-footer-section {
+  float: left;
+  text-align: left;
+  margin: 50px;
+  
+}
